// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles "none" postback with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "n",
    "postback": Object {
      "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "Thanks. You're the first one who gave feedback on this reply!",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "💁 If you have something to say about this article, feel free to submit your own reply at https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz :)",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles "none" postback with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "n",
    "postback": Object {
      "data": "{\\"input\\":\\"n\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We've received feedback from you and 1 other user!",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "💁 If you have something to say about this article, feel free to submit your own reply at https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz :)",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles text comment with no other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "Thanks. You're the first one who gave feedback on this reply!",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "💁 If you have something to say about this article, feel free to submit your own reply at https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz :)",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles text comment with other existing feedbacks 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "y",
    "postback": Object {
      "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We've received feedback from you and 1 other user!",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "💁 If you have something to say about this article, feel free to submit your own reply at https://cofacts.g0v.tw/article/AWDZYXxAyCdS-nWhumlz :)",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`handles that the user wants to modify his comments 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": "r",
    "postback": Object {
      "data": "{\\"input\\":\\"r\\",\\"issuedAt\\":1519019701265}",
    },
    "timestamp": 1519019734813,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1519019735467,
  "replies": Array [
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "Skip",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "Sure. Please revise your reason.",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_NOT_USEFUL_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
